--- a/filmaniac/package.json
+++ b/filmaniac/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
