--- a/filmaniac/package.json
+++ b/filmaniac/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinkit": "^3.0.0",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^3.0.1",
