--- a/filmaniac/package.json
+++ b/filmaniac/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
